[package]
name = "before-hogwild"
version = "0.1.0"
authors = ["ctylim"]
edition = "2018"

[dependencies]
ndarray = "0.12.0"
rayon = "1.2.0"
rand = "0.7.2"
lazy_static = "1.4.0"
clap = "2.33.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lock"
path = "src/lock.rs"

[[bin]]
name = "single"
path = "src/single.rs"
